components/HomePageComponents/HomePageSlider/HomePageSlider.css
@value romanceGray, solitudeBlue, curiousBlue, elephantBlue, onionBrown, bambooOrange, black, casablancaOrange from "../../../css/colors.css";
@value mediumRem, smallRem, largeRem from "../../../css/breakpoints.css";

.wrapper {
  background-color: romanceGray;

  &.theme_blue {
    background-color: solitudeBlue;
  }
}

.content {
  margin: auto;
  padding: 2rem 1rem;

  @media (min-width: smallRem) {
    padding-top: 3rem;
    padding-bottom: 3rem;
  }

  @media (min-width: largeRem) {
    padding: 4rem 0;
  }
}

.heading {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  margin-bottom: 1rem;

  @media (min-width: largeRem) {
    margin-bottom: 1.5rem;
  }
}

.moreLink {
  color: bambooOrange;
  font-size: 1rem;
  font-weight: 600;

  @media (min-width: largeRem) {
    font-size: 1.25rem;
  }
}

.theme_blue .moreLink {
  color: curiousBlue;
}

.moreLinkNoun {
  display: none;

  @media (min-width: smallRem) {
    display: inline;
  }
}

.moreLinkChevron {
  width: 8px;
  height: 14px;
  position: relative;
  top: 2px;
  padding-left: 7px;
}

.title {
  font-family: "Lora";
  font-weight: normal;
  font-size: 1.25rem;

  @media (min-width: smallRem) {
    font-size: 1.5rem;
  }

  @media (min-width: mediumRem) {
    font-size: 2.25rem;
  }
}

.items {
  display: flex;
}

.item {
  display: flex;
  position: relative;
  flex-direction: column;
  padding-right: .5rem;

  &:last-child {
    margin-right: 0;
  }
}

.itemText {
  color: black;
  opacity: 0.75;
  font-size: 1rem;
  margin-top: .5rem;

  @media (min-width: largeRem) {
    font-size: 1.25rem;
    margin-top: 1rem;
  }
}

.itemImg {
  border-radius: 3px;
  width: 100%;
  /* 243 / 334 ratio*/
  padding-top: 72.75%;
}

.arrow {
  position: absolute;
  z-index: 1;
  top: 40%;
  background-color: rgba(255, 255, 255, 0.95);
  box-shadow: 0px 0 15px 0px rgba(0, 0, 0, 0.25);
  transition: box-shadow .5s ease-out, background-color .5s ease-out;
  width: 3rem;
  height: 3rem;
  border-radius: 100%;

  @media (min-width: largeRem) {
    top: 45%;
    height: 5rem;
    box-shadow: none;
    background: transparent;
    border-radius: 3px;
  }

  &:hover,
  &:focus {
    background-color: white;
    box-shadow: 0px 0 20px 0px rgba(0, 0, 0, 0.3);

    @media (min-width: largeRem) {
      background-color: rgba(0, 0, 0, 0.05);
      box-shadow: none;
    }
  }

  &:focus {
    outline: none;
  }

  & img {
    width: .9rem;

    @media (min-width: largeRem) {
      width: 1.5rem;
    }
  }
}

.prevArrow {
  left: -.5rem !important;

  & img {
    transform: rotate(180deg);
    margin-left: -0.25rem;
  }

  @media (min-width: largeRem) {
    left: -3.5rem !important;
  }
}

.nextArrow {
  right: -.5rem !important;

  @media (min-width: largeRem) {
    right: -3.5rem !important;
  }

  & img {
    margin-left: 0.25rem;
  }
}

.featuredTag {
  text-transform: uppercase;
  position: absolute;
  background-color: casablancaOrange;
  top: .5rem;
  left: .5rem;
  padding: .25rem .5rem;
  font-weight: bold;
  font-size: 0.875rem;

  @media (min-width: largeRem) {
    left: -0.25rem;
    padding: .5rem 1rem;
  }
}

/* Vendor overrides: react-slick */

.content {
  @media (min-width: largeRem) {
    & :global .slick-list {
      /* Offset for the featuredTag */
      padding-left: .25rem;
    }
  }

  & :global .slick-prev:before,
  & :global .slick-next:before {
    content: none;
  }

  & :global .slick-disabled {
    display: none;
  }
}

